# vrc_talk_deck

./: .pre-commit-config.yaml  README.md  pyproject.toml
config/: boholder_talk_deck.toml
src/vrc_talk_deck/: boholder_talk_deck.py  entrance.py  main.py
tests/: conftest.py  test_boholder_talk_deck.py  test_main.py
tests/test_files/: config.toml  echo_config.toml  talk_deck_config.toml
