[project]
name = "vrc_talk_deck"
version = "0.1.0"
description = "Simple VRChat avatar chatbox appender using OSC"
authors = [
    { name = "boholder", email = "bottleholder@anche.no" },
]
dependencies = ["python-osc>=1.9.3"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 160
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "PGH", # pygrep-hooks
    "RUF", # ruff
    "W", # pycodestyle
    "YTT", # flake8-2020
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest"
lint = "pre-commit run --all-files"
a = { composite = ["lint", "test"] }


[dependency-groups]
test = [
    "pytest>=8.3.4",
    "pre-commit>=4.1.0"
]
